# http_server

./: Makefile  README.md  pyproject.toml
http_server/src/http_server/: server.py
src/http_server/: server.py
